[package]
name = "tencentcloud-sign-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Yzion Open-Source <open-source@y-zion.com>"]
description = "TencentCloud Sign SDK for Rust - Common signing utilities for TencentCloud APIs"
repository = "https://github.com/y-zion/tencentcloud-sign-sdk-rust"
homepage = "https://github.com/y-zion/tencentcloud-sign-sdk-rust"
documentation = "https://docs.rs/tencentcloud-sign-sdk"
readme = "README.md"
keywords = ["tencentcloud", "sign", "sdk", "hmac", "tc3"]
categories = ["api-bindings", "authentication"]
license-file = "LICENSE"

[dependencies]
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }

[dev-dependencies]
anyhow = "1"
